--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,5 @@
 
 @font-face {
     font-family: "Akira Expanded";
-    src: url("../public/fonts/akira-expanded.otf");
+    src: url("/fonts/akira-expanded.otf");
 }
