--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,7 @@
     font-family: "Akira Expanded";
     src: url("/fonts/akira-expanded.otf");
 }
+
+.color-transition {
+    transition: all 0.5s ease-in-out;
+}
